# kaggle

./: README.md
titanic-ml-from-disaster/: README.md  pyproject.toml
titanic-ml-from-disaster/data/transformed/: cv.csv  test_predictions.csv  train.csv  train_features_sex.csv  train_features_sex_agestatus.csv  train_features_sex_agestatus_pclass.csv
titanic-ml-from-disaster/models/: model.json  model_features_sex.json  model_features_sex_agestatus.json  model_features_sex_agestatus_pclass.json
titanic-ml-from-disaster/notebooks/: explore.ipynb  explore_data.ipynb
titanic-ml-from-disaster/scripts/: train_xgboost_model.py
titanic-ml-from-disaster/titanic_ml_from_disaster/: eval_model.py  model_xgboost.py  prepare_train_features.py  prepare_train_features_sex.py  split_train_cv.py  train_xgboost.py  transform.py
titantic-ml-from-disaster/: pyproject.toml
