[tool.poetry]
name = "titanic-ml-from-disaster"
version = "0.1.0"
description = ""
authors = ["hduce <harry.duce@gmail.com>"]
readme = "README.md"
packages = [{include = "titanic_ml_from_disaster"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.18.6"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
