[tool.poetry]
name = "titanic-ml-from-disaster"
version = "0.1.0"
description = ""
authors = ["hduce <harry.duce@gmail.com>"]
readme = "README.md"
packages = [{include = "titanic_ml_from_disaster"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.18.6"
jupyter = "^1.0.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
